--- a/helm/gitops-server/templates/rolebinding.yaml
+++ b/helm/gitops-server/templates/rolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.rbac.create -}}
+{{- if .Values.giantswarm.rbac.create -}}
 {{- if semverCompare "<1.17-0" (include "common.capabilities.kubeVersion" .) -}}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 {{- else }}
@@ -9,7 +9,7 @@ metadata:
   name:  {{ include "chart.fullname" . }}
   labels:
     {{- include "chart.labels" . | nindent 4 }}
-  {{- with .Values.rbac.annotations }}
+  {{- with .Values.giantswarm.rbac.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
