--- a/helm/gitops-server/values.yaml
+++ b/helm/gitops-server/values.yaml
@@ -1,16 +1,55 @@
-# Default values for chart.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+giantswarm:
+  images:
+    server:
+      image: giantswarm/weaveworks-wego-app
+      pullPolicy: IfNotPresent
+      tag: v0.18.0
+    test:
+      image: giantswarm/busybox
+      pullPolicy: IfNotPresent
+      tag: 1.36.0
+  resources:
+    server:
+      limits:
+        cpu: 200m
+        memory: 256Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
+    test:
+      requests:
+        cpu: 10m
+        memory: 2Mi
+      limits:
+        cpu: 10m
+        memory: 4Mi
+  rbac:
+    create: true
+    impersonation:
+      users:
+        enabled: true
+        # -- If non-empty, this limits the users names that the service account
+        # can impersonate, e.g. `['user1@corporation.com', 'user2@corporation.com']`
+        resourceNames: []
+      groups:
+        enabled: true
+        # -- If non-empty, this limits the groups names that the service account
+        # can impersonate, e.g. `['admins', 'operations', 'devops']`
+        resourceNames: []
+    # -- If non-empty, this limits the secrets that can be accessed by
+    # the service account to the specified ones, e.g. `['weave-gitops-enterprise-credentials']`
+    viewSecretsResourceNames: ["cluster-user-auth", "oidc-auth"]
+    # -- If non-empty, these additional rules will be appended to the RBAC role and the cluster role.
+    # for example,
+    # additionalRules:
+    # - apiGroups: ["infra.contrib.fluxcd.io"]
+    #   resources: ["terraforms"]
+    #   verbs: [ "get", "list", "patch" ]
+    additionalRules: []
 
-# Note: paragraphs starting with `# --` will end up in our manual -
-# see https://github.com/norwoodj/helm-docs
 replicaCount: 1
 image:
-  # FIXME check the app name
-  repository: ghcr.io/weaveworks/wego-app
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.18.0"
+  registry: docker.io
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -43,28 +82,9 @@ serviceAccount:
   # -- The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
-rbac:
-  # -- Specifies whether the clusterRole & binding to the service account should be created
-  create: true
-  # -- If non-empty, this limits the resources that the service
-  # account can impersonate. This applies to both users and groups, e.g.
-  # `['user1@corporation.com', 'user2@corporation.com', 'operations']`
-  impersonationResourceNames: []
-  # -- Limit the type of principal that can be impersonated
-  impersonationResources: ["users", "groups"]
-  # -- If non-empty, this limits the secrets that can be accessed by
-  # the service account to the specified ones, e.g. `['weave-gitops-enterprise-credentials']`
-  viewSecretsResourceNames: ["cluster-user-auth", "oidc-auth"]
-  # -- If non-empty, these additional rules will be appended to the RBAC role and the cluster role.
-  # for example,
-  # additionalRules:
-  # - apiGroups: ["infra.contrib.fluxcd.io"]
-  #   resources: ["terraforms"]
-  #   verbs: [ "get", "list", "patch" ]
-  additionalRules: []
 adminUser:
   # -- Whether the local admin user should be created.
-  # If you use this make sure you add it to `rbac.impersonationResourceNames`.
+  # If you use this make sure you add it to `giantswarm.rbac.impersonation.users.resourceNames`.
   create: false
   # -- Specifies whether the clusterRole & binding to the admin user should be created.
   # Will be created only if `adminUser.create` is enabled. Without this,
@@ -82,7 +102,7 @@ adminUser:
   # -- (string) Set the password for local admin user. Requires `adminUser.create` and `adminUser.createSecret`
   # This needs to have been hashed using bcrypt.
   # You can do this via our CLI with `gitops get bcrypt-hash`.
-  passwordHash:
+  passwordHash: ""
 podAnnotations: {}
 podLabels: {}
 # aadpodidbinding: identity
@@ -111,7 +131,7 @@ ingress:
   annotations: {}
   # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
-  hosts:
+  hosts: []
   # - host: chart-example.local
   #   paths:
   #     - path: /
@@ -123,8 +143,8 @@ ingress:
   #      - chart-example.local
 extraVolumes: []
 extraVolumeMounts: []
-# Example using extraVolumes and extraVolumeMounts to load 'oidc-auth' secret 
-# with a secrets store CSI driver. Specify the secretName 'oidc-auth' in the 
+# Example using extraVolumes and extraVolumeMounts to load 'oidc-auth' secret
+# with a secrets store CSI driver. Specify the secretName 'oidc-auth' in the
 # secretProviderClass so this will be created by the secrets store CSI driver.
 # See https://secrets-store-csi-driver.sigs.k8s.io/topics/sync-as-kubernetes-secret.html
 # extraVolumeMounts:
@@ -138,17 +158,6 @@ extraVolumeMounts: []
 #       readOnly: true
 #       volumeAttributes:
 #         secretProviderClass: ww-gitops-oauth-provider
-resources: {}
-# We usually recommend not to specify default resources and to leave this as a conscious
-# choice for the user. This also increases chances charts run on environments with little
-# resources, such as Minikube. If you do want to specify resources, uncomment the following
-# lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-# limits:
-#   cpu: 100m
-#   memory: 128Mi
-# requests:
-#   cpu: 100m
-#   memory: 128Mi
 
 networkPolicy:
   # -- Specifies whether default network policies should be created.
