--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,31 @@ workflows:
           context: "architect"
           executor: "app-build-suite"
           name: "package and push gitops-server chart"
-          app_catalog: "giantswarm-playground-catalog"
-          app_catalog_test: "giantswarm-playground-test-catalog"
+          app_catalog: "giantswarm-catalog"
+          app_catalog_test: "giantswarm-test-catalog"
+          persist_chart_archive: true
           chart: "gitops-server"
           filters:
             tags:
               only: /^v.*/
+      - architect/run-tests-with-ats:
+          name: execute chart tests - smoke and functional
+          additional_app-test-suite_flags: "--skip-steps upgrade"
+          app-test-suite_version: "v0.2.9"
+          app-test-suite_container_tag: "0.2.9"
+          filters:
+            branches:
+              ignore:
+                - master
+          requires:
+            - "package and push gitops-server chart"
+      - architect/run-tests-with-ats:
+          name: execute chart tests - upgrade
+          additional_app-test-suite_flags: "--skip-steps smoke functional"
+          app-test-suite_version: "v0.2.9"
+          app-test-suite_container_tag: "0.2.9"
+          filters:
+            branches:
+              only: /main#release#.*/
+          requires:
+            - "execute chart tests - smoke and functional"
