--- a/helm/gitops-server/values.yaml
+++ b/helm/gitops-server/values.yaml
@@ -51,7 +51,7 @@ giantswarm:
 
 replicaCount: 1
 image:
-  registry: docker.io
+  registry: gsoci.azurecr.io
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
