--- a/helm/gitops-server/Chart.yaml
+++ b/helm/gitops-server/Chart.yaml
@@ -10,5 +10,5 @@ type: application
 version: 0.1.3
 appVersion: "v0.18.0"
 annotations:
-  application.giantswarm.io/team: team-honeybadger
+  application.giantswarm.io/team: honeybadger
   config.giantswarm.io/version: 1.x.x
